editted the css and html code

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   <header>
 
     <!--right side images-->
-    <img src="/img/menu.svg" alt="Menu" class="header-image">
-    <img src="/img/youtube.png" alt="YouTube" class="header-image">
+    <img src="./img/menu.svg" alt="Menu" class="header-image">
+    <img src="./img/youtube.png" alt="YouTube" class="header-image">
     <!--search bar-->
     <form class=" search-form">
-      <input type="text" class="search-bar">
-      <button class="search-Button"><i class="fas fa-search"></i></button>
+      <input type="text" class="search-bar" value="Search">
+      <button class="search-Button" placeholder="Search"><i class="fas fa-search"></i></button>
     </form>
     <!--left side nav bar-->
-    <img src="/img/upload.png" alt="Create a video" class="header-image">
-    <img src="/img/apps.png" alt="Apps" class="header-image">
-    <img src="/img/bells.svg" alt="Notifications" class="header-image">
+    <img src="./img/upload.png" alt="Create a video" class="header-image">
+    <img src="./img/apps.png" alt="Apps" class="header-image">
+    <img src="./img/bells.svg" alt="Notifications" class="header-image">
     <img class="header-image" src="https://miro.medium.com/max/3150/1*ymMI142YPuGSUCmZIs-EaA.png" alt="microverse logo">
 
   </header>
@@ -36,27 +36,27 @@
   <main>
     <section>
       <div id="main-video">
-        <iframe width="840" height="315" src="https://www.youtube.com/embed/48YW53TPbhw" allowfullscreen></iframe>
+        <iframe width="840" height="399.375" src="https://www.youtube.com/embed/48YW53TPbhw" allowfullscreen></iframe>
       </div>
       <div id="main-info1">
         <div class="main-video-name">
           <h1>SHATTA WALE - Everybody Likes My Tin by PPV HD</h1>
         </div>
 
-<!-- 
+ 
         <div class="info-container">
           <div class="video-views"> 67,645,387 views</div>
           <div class="video-date">• Published on Feb 29, 2012</div>
-          <img src="/img/rates.png" class="video-rates" alt="rates" />
+          <img src="./img/rates.png" class="video-rates" alt="rates" />
         </div>
       </div>
       <div id="main-info2">
         <div class="first-row">
           <div class="singers-logo">
-            <img class="logo" src="/img/sh.png" alt="sh" />
+            <img class="logo" src="./img/sh.png" alt="sh" />
           </div>
           <div class="singers-name">Elementum eu facilisis </div><br />
-          <div class="sub-counter">154K subscribers</div><br />
+          <div class="subscribers">154K subscribers</div><br />
           <button class="subscribe-button">SUBSCRIBE</button>
         </div>
         <div class="description">
@@ -64,72 +64,30 @@
           <p class="description-text">Tour Dates on his website</p>
           <h3 class="description-toggle">SHOW MORE</h3>
         </div>
-      </div> -->
+      </div> 
 
-      <div class="social-bar">
-        <div class="views">
-            <p>9,793,914 views • Dec 28, 2019</p>
-        </div>
-        <div>
-            <div class="likes-dislikes-shares">
-                <button type="button" class="fas fa-thumbs-up"></button>
-                <label>46K</label>
-                <button type="button" class="fas fa-thumbs-down"></button>
-                <label>18K</label>
-                <button type="button" class="fas fa-share"></button>
-                <label>SHARE</label>
-                <button type="button" class="fas fa-folder-plus"></button>
-                <label>SAVE</label>
-                <button type="button" class="fas fa-ellipsis-h"></button>
-            </div>
-            <div class="sentiment-bar">
-                <div class="inside-bar"></div>
-            </div>
-            
-        </div>
-    </div>
-    <div class="channel-section">
-        <div class="avatar-section">
-            <img class="channel-avatar-logo" src="https://yt3.ggpht.com/a/AGF-l78qQUPvYzN23BeKFgBD13iO0FCkh5VwOjsYZA=s48-c-k-c0xffffffff-no-rj-mo" alt="channel-avatar-logo">
-            <div class="title-channel">
-                <div class="channel-name-container">
-                    <a class="channel-name" href="#">WB Kids</a>
-                    <i class="fas fa-check-circle"></i>
-                </div>
-                <p class="subscribers">7.97M subscribers</p>
-            </div>
-        </div>
-        <div class="subscribe-section">
-            <button type="button" name="subscribe-button" class="subscribe-button">SUBSCRIBE</button>
-        </div>
-    </div>
-    <div class="description-section">
-        <p class="description-content">We have curated some of the most loved Tom & Jerry moments this year into a mega compilation for you to enjoy, here's to a new year!</p>
-        <button type="button" name="show-more" class="show-more">SHOW MORE</button>
-    </div>
-</div>
-
+    
       <!--comments-->
 
       <div id="main-comment">
-        <div class="comment-header">
-          <div class="comments">36,171 Comments</div>
-          <div class="sort-button">
-            <div class="bar-top"></div>
-            <div class="bar-mid"></div>
-            <div class="bar-bottom"></div>
-          </div>
-          <div class="sort-text">SORT BY</div>
-        </div>
-        <div class="comments-container">
-          <div class="user-logo">
-            <img class="user" src="img/user.jpg" alt="user" />
-          </div>
-          <div class="user-comments">
-            <input class="user-comment-input" placeholder="Add a public comment..." />
-          </div>
-        </div>
-      </div>
+				<div class="comment-header">
+					<span class="comments">360 Comments</span>
+					<span class="sort-button">
+						<div class="bar-top"></div>
+						<div class="bar-mid"></div>
+						<div class="bar-bottom"></div>
+					</span>
+					<span class="sort-text">SORT BY</span>
+				</div>
+				<div class="comments-container">
+					<span class="user-logo">
+						<img class="user" src="img/user.jpg" />
+					</span>
+					<span class="user-comments">
+						<input class="user-comment-input" placeholder="Add a public comment..." />
+					</span>
+				</div>
+			</div>
 
 
       <!--the comments itself-->
@@ -138,7 +96,7 @@
         <div class="comments-block">
           <div class="comment">
             <div class="commenter-logo-container">
-              <img class="commenter-logo" src="/img/commenter.jpg" alt="commenter" />
+              <img class="commenter-logo" src="./img/commenter.jpg" alt="commenter" />
             </div>
             <div class="comment-wrapper">
               <div class="commenter-username">
@@ -149,22 +107,22 @@
                 Anyone else think he looks like a Jamaican singer?
               </div>
               <div class="comment-toolbar">
-                <img class="thumbs-up" src="/img/thumbs-up.png" alt="thumpsup" />
+                <img class="thumbs-up" src="./img/thumbs-up.png" alt="thumpsup" />
                 <div class="score">10K</div>
-                <img class="thumbs-down" src="/img/thumbsdown.png" alt="thumbsdownd" />
+                <img class="thumbs-down" src="./img/thumbsdown.png" alt="thumbsdown" />
                 <div class="reply-button">REPLY</div>
               </div>
             </div>
             <div class="comment-action-button"></div>
           </div>
           <div class="sub-comments">
-            <div>View 335 replies</div><div class="down-arrow">&#8964;</div>
+            <div>View replies   </div><div class="down-arrow"><i class="fas fa-caret-down"></i></div>
           </div>
 
           <div class="comment-block">
             <div class="comment">
               <div class="commenter-avatar-container">
-                <img class="commenter-avatar" src="/img/user.jpg" alt="commenter" />
+                <img class="commenter-avatar" src="./img/user.jpg" alt="commenter" />
               </div>
               <div class="comment-wrapper">
                 <div class="commenter-username">
@@ -175,23 +133,23 @@
                   Please subscribe to my channel for more :)
                 </div>
                 <div class="comment-toolbar">
-                  <img class="thumbs-up" src="img/thumbs-up.png" alt="thumbsup" />
+                  <img class="thumbs-up" src="./img/thumbs-up.png" alt="thumbsup" />
                   <div class="score">977</div>
-                  <img class="thumbs-down" src="/img/thumbsdown.png" alt="thumbsdownd" />
+                  <img class="thumbs-down" src="./img/thumbsdown.png" alt="thumbsdownd" />
                   <div class="reply-button">REPLY</div>
                 </div>
               </div>
               <div class="comment-action-button"></div>
             </div>
             <div class="sub-comments">
-              <div>View 33 replies</div><div class="down-arrow">&#8964;</div>
+              <div>View replies</div><div class="down-arrow"><i class="fas fa-caret-down"></i></div>
             </div>
           </div>
         </div>
         <div class="comment-block">
           <div class="comment">
             <div class="commenter-avatar-container">
-              <img class="commenter-avatar" src="/img/commenter-2.jpg" alt="commenter" />
+              <img class="commenter-avatar" src="./img/commenter-2.jpg" alt="commenter" />
             </div>
             <div class="comment-wrapper">
               <div class="commenter-username">
@@ -205,14 +163,14 @@
               <div class="comment-toolbar">
                 <img class="thumbs-up" src="./img/thumbs-up.png" alt="thumbsup" />
                 <div class="score">463</div>
-                <img class="thumbs-down" src="./img/thumbs-down.png" alt="thumbsdown" />
+                <img class="thumbs-down" src="./img/thumbsdown.png" alt="thumbsdown" />
                 <div class="reply-button">REPLY</div>
               </div>
             </div>
             <div class="comment-action-button"></div>
           </div>
           <div class="sub-comments">
-            <div>View 17 replies</div><div class="down-arrow">&#8964;</div>
+            <div>View replies</div><div class="down-arrow"><i class="fas fa-caret-down"></i></div>
           </div>
         </div>
         <div class="comment-block">
@@ -239,7 +197,7 @@
             <div class="comment-action-button"></div>
           </div>
           <div class="sub-comments">
-            <div>View 8 replies</div><div class="down-arrow">&#8964;</div>
+            <div>View replies</div><div class="down-arrow"><i class="fas fa-caret-down"></i></div>
           </div>
         </div>
         <div class="comment-block">
@@ -265,7 +223,7 @@
             <div class="comment-action-button"></div>
           </div>
           <div class="sub-comments">
-            <div>View 5 replies</div><div class="down-arrow">&#8964;</div>
+            <div>View replies</div><div class="down-arrow"><i class="fas fa-caret-down"></i></div>
           </div>
         </div>
       </div>
