--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--search bar-->
     <form class=" search-form">
       <input type="text" class="search-bar" value="Search">
-      <button class="search-Button" placeholder="Search"><i class="fas fa-search"></i></button>
+      <button class="search-Button" value="Search"><i class="fas fa-search"></i></button>
     </form>
     <!--left side nav bar-->
     <img src="./img/upload.png" alt="Create a video" class="header-image">
@@ -36,7 +36,7 @@
   <main>
     <section>
       <div id="main-video">
-        <iframe width="840" height="399.375" src="https://www.youtube.com/embed/48YW53TPbhw" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/48YW53TPbhw" allowfullscreen></iframe>
       </div>
       <div id="main-info1">
         <div class="main-video-name">
@@ -71,21 +71,21 @@
 
       <div id="main-comment">
 				<div class="comment-header">
-					<span class="comments">360 Comments</span>
-					<span class="sort-button">
+					<div class="comments">360 Comments</div>
+					<div class="sort-button">
 						<div class="bar-top"></div>
 						<div class="bar-mid"></div>
 						<div class="bar-bottom"></div>
-					</span>
-					<span class="sort-text">SORT BY</span>
+          </div>
+					<div class="sort-text">SORT BY</div>
 				</div>
 				<div class="comments-container">
-					<span class="user-logo">
-						<img class="user" src="img/user.jpg" />
-					</span>
-					<span class="user-comments">
-						<input class="user-comment-input" placeholder="Add a public comment..." />
-					</span>
+					<div class="user-logo">
+						<img class="user" src="img/user.jpg" alt="user" />
+					</div>
+					<div class="user-comments">
+						<input class="user-comment-input" value="Add a public comment..." />
+					</div>
 				</div>
 			</div>
 
