editting for final review

--- a/index.html
+++ b/index.html
@@ -69,25 +69,26 @@
     
       <!--comments-->
 
-      <div id="main-comment">
-				<div class="comment-header">
-					<div class="comments">360 Comments</div>
-					<div class="sort-button">
-						<div class="bar-top"></div>
-						<div class="bar-mid"></div>
-						<div class="bar-bottom"></div>
-          </div>
-					<div class="sort-text">SORT BY</div>
-				</div>
-				<div class="comments-container">
-					<div class="user-logo">
-						<img class="user" src="img/user.jpg" alt="user" />
-					</div>
-					<div class="user-comments">
-						<input class="user-comment-input" value="Add a public comment..." />
-					</div>
-				</div>
-			</div>
+      <div class="comment-header">
+        <span class="comments">360 Comments</span>
+        <span class="sort-button">
+          <div class="bar-top"></div>
+          <div class="bar-mid"></div>
+          <div class="bar-bottom"></div>
+        </span>
+        <span class="sort-text">SORT BY</span>
+      </div>
+      <div class="comments-container">
+        <span class="user-logo">
+          <img class="user" src="img/user.jpg" />
+        </span>
+        <span class="user-comments">
+          <input class="user-comment-input" placeholder="Add a public comment..." />
+        </span>
+      </div>
+    </div>
+
+
 
 
       <!--the comments itself-->
