editted for final review

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <button class="search-Button" value="Search"><i class="fas fa-search"></i></button>
     </form>
     <!--left side nav bar-->
-    <img src="./img/upload.png" alt="Create a video" class="header-image">
-    <img src="./img/apps.png" alt="Apps" class="header-image">
+    <img src="./img/upload.png" alt="Create a video" class="header-image" id="images">
+    <img src="./img/apps.png" alt="Apps" class="header-image" id="images">
     <img src="./img/bells.svg" alt="Notifications" class="header-image">
     <img class="header-image" src="https://miro.medium.com/max/3150/1*ymMI142YPuGSUCmZIs-EaA.png" alt="microverse logo">
 
