editted the interactive-icons-bar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
         <div class="info-container">
           <div class="video-views"> 67,645,387 views</div>
           <div class="video-date">• Published on Feb 29, 2012</div>
-          <img src="./img/rates.png" class="video-rates" alt="rates" />
+        <div class="video-rates">
+         <a href="#"> <img src="./img/thumbsup.png"  class="thumbsup" alt="thumbsup" /> 120k</a><br />
+          <a href="#"><img src="./img/thumbsdown.png" class="thumbsdown" alt="thumbsdown" />40k</a><br />
+          <a href="#"><img src="./img/share.png"  class="share" alt="share" />SHARE</a><br />
+          <a href="#"><img src="./img/save.png" class="save" alt="save" />SAVE</a><br />
+          <a href="#"><img src="./img/more.png" class="more" alt="more" /></a><br />
+
+          </div>
         </div>
       </div>
       <div id="main-info2">
