--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </form>
     <!--left side nav bar-->
     <img src="./img/upload.png" alt="Create a video" class="header-image" id="images">
-    <img src="./img/apps.png" alt="Apps" class="header-image" id="images">
+    <img src="./img/apps.png" alt="Apps" class="header-image" id="images1">
     <img src="./img/bells.svg" alt="Notifications" class="header-image">
     <img class="header-image" src="https://miro.medium.com/max/3150/1*ymMI142YPuGSUCmZIs-EaA.png" alt="microverse logo">
 
@@ -45,14 +45,21 @@
 
  
         <div class="info-container">
+          <div class="left-side">
           <div class="video-views"> 67,645,387 views</div>
           <div class="video-date">• Published on Feb 29, 2012</div>
+        </div>
         <div class="video-rates">
-         <a href="#"> <img src="./img/thumbsup.png"  class="thumbsup" alt="thumbsup" /> 120k</a><br />
-          <a href="#"><img src="./img/thumbsdown.png" class="thumbsdown" alt="thumbsdown" />40k</a><br />
-          <a href="#"><img src="./img/share.png"  class="share" alt="share" />SHARE</a><br />
-          <a href="#"><img src="./img/save.png" class="save" alt="save" />SAVE</a><br />
-          <a href="#"><img src="./img/more.png" class="more" alt="more" /></a><br />
+         <button> <img src="./img/thumbsup.png"  class="thumbsup" alt="thumbsup" /> 120k</button>
+         <br/>
+          <button><img src="./img/thumbsdown.png" class="thumbsdown" alt="thumbsdown" />40k</button>
+          <br/>
+          <button><img src="./img/share.png"  class="share" alt="share" />SHARE</button>
+          <br/>
+          <button><img src="./img/save.png" class="save" alt="save" />SAVE</button>
+          <br/>
+          <button><img src="./img/more.png" class="more" alt="more" /></button>
+          <br/>
 
           </div>
         </div>
@@ -77,23 +84,22 @@
       <!--comments-->
 
       <div class="comment-header">
-        <span class="comments">360 Comments</span>
-        <span class="sort-button">
+        <div class="comments">360 Comments</div>
+        <div class="sort-button">
           <div class="bar-top"></div>
           <div class="bar-mid"></div>
           <div class="bar-bottom"></div>
-        </span>
-        <span class="sort-text">SORT BY</span>
+        </div>
+        <div class="sort-text">SORT BY</div>
       </div>
       <div class="comments-container">
-        <span class="user-logo">
-          <img class="user" src="img/user.jpg" />
-        </span>
-        <span class="user-comments">
+        <div class="user-logo">
+          <img class="user" src="img/user.jpg" alt="user" />
+        </div>
+        <div class="user-comments">
           <input class="user-comment-input" placeholder="Add a public comment..." />
-        </span>
+        </div>
       </div>
-    </div>
 
 
 
